[Feature] 로그인/회원가입/로그아웃 기능 구현 #4 로그인/회원가입/로그아웃 처리
https://github.com/min-38/GreenCloud/issues/4